Wed, Aug 16, 2006 Daniel R. Fisher
1.  Added the capability to make two dimensional correlation diagrams.
    A correlation diagram shows the distribution of one coordinate for
    a pair of electrons.  For example, if we were making a correlation
    diagram for the x coordinte of parallel spin electrons, at each
    iteration we would add the weight of the walker to the histogram
    bin corresponding to x1,x2 for each parallel pair.

2.  Added a shuffle operation to QMCDansWalkerInitialization.  Now,
    the order of the alpha electrons are shuffled and the order of the
    beta electrons are shuffled.  This will not change the energy or
    value of the wavefunction, but will make the correlation diagrams
    more symmetric. 


Thur, 20 July 2006 Amos Anderson
1.	Changed some of the default parameters.

2.	Added a new convergence criteria called "max_time". Basically,
	this will limit the number of samples to "max_time/dt_run". The
	purpose is so that a consistent number of steps can be applied
	across several dt values.

Thur, 20 July 2006 Amos Anderson
NOTE: I discovered that I coded IeeeMath.cpp wrong: apparently this doesn't work the way
I thought it would "x == std::numeric_limits<T>::quiet_NaN()", at least not on all systems.
I still haven't figured out how to do this without resorting to c-style functions like "isfinite()".

1.	I've substantially modified QMCFlags.cpp. I tried to organize
	the flags according to purpose -- arbitrary to be sure, but hopefully
	the flags would make a little more sense to a newcomer now. The original
	point was that I wanted the restart input file to be organized.

2.	I changed QMCFlags.cpp so that input files can now have comments. A line
	that begins with a '#' will be ignored -- as long as it doesn't appear
	between a flag name and flag parameter. There might be some issues with
	the system, so be vigilant!

3.	I changed QMCWavefunction.cpp so that it is neater when writing out the